# wspc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
example/: client.py  requirements.txt  server.cpp  wspc.py
src/wspc/: service.cpp  service.hpp  service_handler.cpp  service_handler.hpp  transport.cpp  transport.hpp  type_description.cpp  type_description.hpp  typed_service_handler.cpp  typed_service_handler.hpp
